<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">SaFoDel</string>
    <string name="mapbox_access_token" translatable="false">pk.eyJ1IjoiamF6MjAyMTA4MjciLCJhIjoiY2tzdTI5NWttMWJ5NzJua3R4Ynd5aG5sOSJ9.5zTN0BjRVD-NBfNe32sAaw</string>
    <string name="password" translatable="false">80854365343587668507554409661299615981564318692495966332079859859680949422633</string>
    <string name="app_id_weather_api" translatable="false">898ef19b846722554449f6068e7c7253</string>
    <string name="city_name" translatable="false">Caulfield,AU</string>
    <string name="start_learning_mode">Welcome to the SaFoDel learning mode</string>
    <string name="end_learning_mode">Thanks for watching</string>
    <string name="notify_select_option">Please select an option</string>
    <string name="start_button">START</string>
    <string name="again_button">AGAIN</string>
    <string name="rule_info_button">RULE INFO</string>
    <string name="submit_button">SUBMIT</string>
    <string name="finish_button">FINISH</string>
    <string name="go_next_button">NEXT QUESTION</string>
    <string name="next_button">NEXT</string>
    <string name="close_button">CLOSE</string>
    <string name="SaFoDel">SaFoDel</string>
    <string name="SaFo">SaFo</string>
    <string name="Del">Del</string>
    <string name="welcome_to">WELCOME TO</string>
    <string name="start_subtitle">YOUR SAFE FOOD DELIVERY PARTNER</string>
    <string name="learning_mode">LEARNING MODE</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="app_intro">About App</string>
    <string name="safety_gear">Safety Gear</string>
    <string name="developer">About Us</string>
    <string name="exam">Quiz</string>
    <string name="analysis">Trends</string>
    <string name="raining">Raining</string>
    <string name="light_mode">Light Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="language">Language</string>
    <string name="home_page_slang_1">Preparing you for safer food deliveries on bicycle in Victoria</string>
    <string name="home_page_slang_2">Don\'t put your life at risk for other\'s convenience</string>
    <string name="map_intro">Get familiar with your area</string>
    <string name="analysis_intro">Accident trends</string>
    <string name="checklist_intro">Get ready for delivering</string>
    <string name="quiz_intro">Check your understanding</string>
    <string name="epic1_slang">Find out how to ride safely while delivering food</string>
    <string name="epic2_slang">Find information on using e-bikes for food delivery</string>
    <string name="epic3_slang">Find out the cycling gear you need to deliver safe</string>
    <string name="epic4_slang">Find out the measure for handling the bike accident</string>
    <string name="tip1_slang">Here are a few safety tips for delivering food on bicycle</string>
    <string name="tip2_slang">Worried about your safety while delivering at night? Follow these tips to stay safe</string>
    <string name="tip3_slang">Here are a few significant road signs you must understand</string>
    <string name="info1_slang">E-bikes are rising in popularity especially in the food delivery community, here\'s why</string>
    <string name="info2_slang">Wondering whether the e-bike rules and regulations are different?</string>
    <string name="info3_slang">Be aware of the risks of delivering on an e-bike</string>
    <string name="gear1_slang">Wearing proper safety gear while delivering food is a must. Find more about the essential safety gear below</string>
    <string name="gear2_slang">Worried about forgetting essential safety gear?\nFollow this checklist for a quick heads up!</string>
    <string name="gear3_slang"><![CDATA[Bicycle helmets should have a sticker showing the Australian Standard <font color="#EE0000">AS 2063, AS/NZS 2063</font>!]]></string>
    <string name="in_an_accident1_slang">Steps to follow in the event of an accident</string>
    <string name="in_an_accident2_slang">Information about current movements in gig workers\' rights</string>
    <string name="in_an_accident3_slang">Find out information regarding insurance claims</string>
    <string name="v1">Food delivery riders are not given enough safety training and local traffic knowledge, putting them at risk.</string>
    <string name="v2_title">What is SaFoDel ?</string>
    <string name="v2_description">We help prepare you for a safe food delivery experience on bicycle. Currently, these services focus on Victorian delivery riders.</string>
    <string name="v3_description">It helps you by providing consolidated safety information, cycling rules and tips as well as convey to you insights about bicycle accidents in Victoria.</string>
    <string name="v0">Welcome to learning mode\nIt\'s time to get to know more about the application\n\nClick Next for the next step\n\nClick Close to leave learning mode</string>
    <string name="first_target">This bar allows for quick navigation across the main features of the app, you can click on any button to quickly navigate to your desired feature</string>
    <string name="second_target">This panel also shows some of the main features of the app but with further detail and images. Click on any of the images to go to the destination feature</string>
    <string name="third_target">Scroll up until the logo has disappeared to see all our available app sections.</string>
    <string name="fourth_target">These cards contain useful information about cycling related issues.</string>
    <string name="fifth_target">Scroll down until the logo has been fully extended.</string>
    <string name="ninth_target">The left menu has\nABOUT APP:\nUnderstand the purpose of this app.\n\nABOUT US:\nKnow more about the developer team.\n\nLanguage:\nSwitch to your preferred language.</string>
    <string name="click_next">Well down. Click next</string>
    <string name="epic1_name">Ride Safer</string>
    <string name="tip1_name">Safety Tips</string>
    <string name="tip2_name">Delivering at Night</string>
    <string name="tip1_1_title">Hook turn at intersections</string>
    <string name="tip1_1_statistics">Bicycle crashes are marginally more common (55%) at intersections</string>
    <string name="tip1_1_description">It’s often safer to perform a hook turn at an intersection to turn right.</string>
    <string name="tip1_2_title">Blind spots</string>
    <string name="tip1_2_statistics" translatable="false"></string>
    <string name="tip1_2_description">Avoid riding in a vehicle’s blind spots and beware larger vehicles have bigger blind spots.</string>
    <string name="tip1_3_title">Watch out for dooring</string>
    <string name="tip1_3_statistics">8% of bike rider casualties occur when a driver opens their door into the path of a bike rider</string>
    <string name="tip1_3_description">Be careful around parked vehicles where people may be getting in or out, reduce speed, be vigilant.</string>
    <string name="tip2_0_description">Take extra care when cycling at night. It is harder for drivers to see you and for you to see hazards.</string>
    <string name="tip2_1_title">Be visible</string>
    <string name="tip2_1_statistics" translatable="false"></string>
    <string name="tip2_1_description">Be seen, try ride on well lit roads, wear visible clothing and use reflective gear.</string>
    <string name="tip2_2_title">Have the right lights</string>
    <string name="tip2_2_statistics" translatable="false"></string>
    <string name="tip2_2_description">Legally you need to ride with a:\n - White front light\n - Red back light\n - Red reflector</string>
    <string name="tip2_3_title">Be predictable</string>
    <string name="tip2_3_statistics" translatable="false"></string>
    <string name="tip2_3_description">Ride in a way that other road users would expect you to ride.</string>
    <string name="epic2_name">Delivery on E-bike</string>
    <string name="info1_name">Advantages of Delivering on E-Bikes</string>
    <string name="info2_name">E-Bikes Rules &amp; Regulation</string>
    <string name="info3_name">Risks with E-bikes</string>
    <string name="info1_1_description">Make riding twice as easy as push bikes.</string>
    <string name="info1_2_description">Good for uphill riding or long distances.</string>
    <string name="info1_3_description">Promote sustainability.</string>
    <string name="info1_4_description">Usually cheaper to rent.</string>
    <string name="info2_1_description">Max motor power of 250 watts in Victoria.</string>
    <string name="info2_2_description">Max speed of 25 km/h.</string>
    <string name="info2_3_description">All other rules regarding regular bicycles.</string>
    <string name="info3_1_description">Higher speeds can be more dangerous.</string>
    <string name="info3_2_description">Initial e-bike throttle leads to injuries.</string>
    <string name="info3_3_description">E-bike battery catching fire.</string>
    <string name="info3_4_description">Higher rates of bike theft.</string>
    <string name="gear2_name">A checklist of necessary safety equipment</string>
    <string name="gear3_name">Australian Standards for Safety Gear</string>
    <string name="gear_check_list_item1">Helmet</string>
    <string name="gear_check_list_item2">Rear and front lights</string>
    <string name="gear_check_list_item3">Mask and face over</string>
    <string name="gear_check_list_item4">Reflective vest</string>
    <string name="gear_check_list_item5">Gloves</string>
    <string name="gear_check_list_item6">Hand sanitiser</string>
    <string name="gear_standard_bsi" translatable="false">BSI</string>
    <string name="gear_standard_global_mark" translatable="false">Global-Mark</string>
    <string name="gear_standard_sai_global" translatable="false">SAI Global</string>
    <string name="gear_standard_aus" translatable="false">AUS</string>
    <string name="epic4_name">In an Accident</string>
    <string name="in_an_accident1_name">Steps to Follow</string>
    <string name="in_an_accident2_name">Workers\' Rights</string>
    <string name="in_an_accident3_name">Claiming Insurance</string>
    <string name="in_an_accident1_0_description">This is general advice only, for personalised advice please seek professional help.</string>
    <string name="in_an_accident1_1_title">Check on Yourself</string>
    <string name="in_an_accident1_1_description">Make sure you are okay, contact help if needed and try to place yourself in a safe location.</string>
    <string name="in_an_accident1_2_title">Collect Details &amp; Take Photos</string>
    <string name="in_an_accident1_2_description">Collect the details of those involved in the accident and any witnesses, take photos as evidence.</string>
    <string name="in_an_accident1_2_title2">Collect Details &amp; Take Photos</string>
    <string name="in_an_accident1_2_description2">Collect the details of those involved in the accident and any witnesses.</string>
    <string name="in_an_accident1_3_title">See a Doctor</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="quiz">QUIZ</string>
    <string name="quiz_heading">Take this short quiz to test your knowledge of the road rules</string>
    <string name="see_history">View History</string>
    <string name="check_leave">Are you sure to leave?</string>
    <string name="warning_msg">All current data will be removed</string>
    <string name="what">WHAT</string>
    <string name="why">WHY</string>
    <string name="how">HOW</string>
    <string name="know_more">KNOW MORE</string>
    <string name="checklist">Checklist</string>
    <string name="not_available">Not Available</string>
    <string name="current_weather">Weather:</string>
    <string name="current_traffic">Traffic:</string>
    <string name="current_temperature">Temp:</string>
</resources>