<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <!--
            Each button of the side navigation is described here.
            icons download from https://fonts.google.com/icons.
        -->
        <item
            android:id="@+id/navHome"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home" />

        <item
            android:id="@+id/navMap"
            android:icon="@drawable/ic_baseline_location_on_24"
            android:title="@string/map" />
        <item
            android:id="@+id/navAnalysis"
            android:icon="@drawable/analysis"
            android:title="@string/analysis"/>


        <item
            android:id="@+id/navExam"
            android:icon="@drawable/exam"
            android:title="@string/exam"/>

        <item
            android:id="@+id/navCheckList"
            android:icon="@drawable/checklist_not_finish"
            android:title="@string/checklist"/>

    </group>
</menu>