<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/check_leave"
        android:textSize="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/warning_msg"
        android:textSize="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:backgroundTint="@color/primary_green"
                android:elevation="5dp"
                android:fontFamily="@font/rubik_bold"
                android:text="@string/yes"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="@color/white"
                android:textSize="16dp"
                app:cornerRadius="50dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:backgroundTint="@color/primary_green"
                android:elevation="5dp"
                android:fontFamily="@font/rubik_bold"
                android:text="@string/no"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="@color/white"
                android:textSize="16dp"
                app:cornerRadius="50dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>