<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/snow"
    tools:context=".fragment.menuLeft.AppIntroFragment">


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/logo_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.466">

<!--        <pl.droidsonroids.gif.GifImageView-->
<!--            android:id="@+id/logo_shaking"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:src="@drawable/driver_helmet_shaking"-->
<!--            android:scaleX="1.6"-->
<!--            android:scaleY="1.6"-->
<!--            android:visibility="gone"-->
<!--            android:layout_gravity="center"/>-->
        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="15dp"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:src="@drawable/driver_helmet"
            android:translationZ="10dp" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <TextView
        android:id="@+id/appName"
        style="@style/textStyle20_bold_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/SaFoDel"
        android:textSize="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/logo_image" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName"
        app:layout_constraintVertical_bias="0.054">

        <TextView
            android:id="@+id/what"
            style="@style/textStyle16_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/what" />

        <TextView
            android:id="@+id/why"
            style="@style/textStyle16_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:clickable="true"
            android:text="@string/why" />

        <TextView
            android:id="@+id/how"
            style="@style/textStyle16_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:clickable="true"
            android:text="@string/how" />

    </LinearLayout>

    <TextView
        android:id="@+id/app_intro_know_more"
        style="@style/textStyle16_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/know_more"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:layout_constraintVertical_bias="0.067" />

    <include
        android:id="@+id/toolbar"
        layout="@layout/simple_toolbar" />

</androidx.constraintlayout.widget.ConstraintLayout>