<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/snow"
    android:gravity="bottom">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/correct_option_border_bg"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/current_weather_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:src="@drawable/error_icon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/current_weather"
                style="@style/textStyle16_gray"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:layout_margin="5dp"
                android:text="@string/current_weather" />
            <TextView
                android:id="@+id/current_weather_info"
                style="@style/textStyle16_gray"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:layout_margin="5dp"
                android:text="@string/not_available" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/current_temp"
                style="@style/textStyle16_gray"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:layout_margin="5dp"
                android:text="@string/current_temperature" />
            <TextView
                android:id="@+id/current_temp_info"
                style="@style/textStyle16_gray"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:layout_margin="5dp"
                android:text="@string/not_available" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/current_traffic"
                style="@style/textStyle16_gray"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:layout_margin="5dp"
                android:text="@string/current_traffic" />
            <TextView
                android:id="@+id/current_traffic_info"
                style="@style/textStyle16_gray"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:layout_margin="5dp"
                android:text="@string/not_available" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>