<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/welcome_information1_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/snow">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="60dp"
            android:layout_marginRight="50dp"
            android:scaleX="2"
            android:scaleY="2"
            android:src="@drawable/home_activity_image" />

<!--        <TextView-->
<!--            android:id="@+id/subtitle1"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="80dp"-->
<!--            android:fontFamily="@font/rubik_medium"-->
<!--            android:gravity="center"-->
<!--            android:text="@string/welcome_to"-->
<!--            android:padding="5dp"-->
<!--            android:textColor="@color/primary_green"-->
<!--            android:textSize="16dp" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="100dp">

            <TextView
                android:id="@+id/safo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lobster_two_bold"
                android:gravity="center"
                android:text="@string/SaFo"
                android:textColor="@color/primary_green"
                android:textSize="70dp" />

            <TextView
                android:id="@+id/del"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lobster_two_bold"
                android:gravity="center"
                android:text="@string/Del"
                android:textColor="@color/wrong_border_color"
                android:textSize="70dp" />

<!--            <TextView-->
<!--                android:id="@+id/safodel"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:fontFamily="@font/lobster_two_bold_italic"-->
<!--                android:gravity="center"-->
<!--                android:text="@string/SaFoDel"-->
<!--                android:textColor="@color/primary_green"-->
<!--                android:textSize="60dp" />-->
        </LinearLayout>

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/rubik_bold"
            android:textAlignment="center"
            android:gravity="center"
            android:paddingHorizontal="40dp"
            android:padding="5dp"
            android:text="@string/start_subtitle"
            android:textColor="@color/primary_green"
            android:textSize="16dp" />
    </LinearLayout>

</LinearLayout>